--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Oleg Lavrovsky
-title: 10201 with MuDA
+title: 10201 @ MuDA
 when: 2017-03-01
 date: 2017-02-14
 tagline:
@@ -13,17 +13,17 @@ frontpage: true
 <table>
 <tr><th>What:</th><td>Urban data literacy workshops.</td></tr>
 <tr><th>When:</th><td>March 1 - 5, 2017</td></tr>
-<tr><th>Where:</th><td>[MuDA](http://muda.co/stream/10201.php), Zürich, Switzerland.</td></tr>
+<tr><th>Where:</th><td>MuDA, Zürich, Switzerland.</td></tr>
 <tr><th>Cost:</th><td>Free of charge.</td></tr>
 <tr><th>Bring:</th><td>A laptop or tablet.</td></tr>
 <tr><th></th><td><a href="https://www.facebook.com/events/157349754768822/#" class="button special">RSVP here</a>&nbsp;<a href="https://forum.schoolofdata.ch/t/1-5-3-i-o-ii-o-i/203" class="button special">Reply on forum</a></td></tr>
 </table>
 
-Examining the exact area of 101 by 101 metres (10201 m<sup>2</sup>) surrounding the [Museum of Digital Arts](http://muda.co/stream/10201.php) (MuDA), we would like to question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events, we are helping MuDA to empower participation by the public in our community embracing the power of information.
+Our next **[Data Expedition](http://schoolofdata.org/data-expeditions/)** focuses on life and data in the neighbourhood. Examining the exact area of 101 by 101 metres (10201 m<sup>2</sup>) surrounding the [Museum of Digital Arts](http://muda.co/stream/10201.php) (MuDA), we would like to question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events at MuDA, we hope to empower participation by the public in our community embracing the power of information.
 
 ![](http://muda.co/stream/img/10201_muda.jpg)
 
-Our next **[Data Expedition](http://schoolofdata.org/data-expeditions/)** focuses on life and data in the neighbourhood. We will aim to:
+We will aim to:
 
 - brainstorm what information helps us be more aware of each other in a local community
 - find existing and open data sets covering this type of information
@@ -33,6 +33,8 @@ Our next **[Data Expedition](http://schoolofdata.org/data-expeditions/)** focuse
 Data literacy is the ability to derive meaningful information from data, just as literacy in general is the ability to derive information from the written word.
 
 > Beyond the traditional statistics, what is really occurring underneath, within and around all that WE know and experience in Kreis 5? What does it mean to be part of this once abandoned industrial quartier which has undergone a remarkable transformation in recent decades? What are the implications of raising rent, building an asylum center, boom of trendy businesses and a growing population? How many trucks pass by the MuDA on a daily basis?
+
+Opening hours and location details can be found at [muda.co/info](http://muda.co/info/).
 
 Please use [our contact form](http://schoolofdata.ch#contact) or [forum](https://forum.schoolofdata.ch/) for any questions or feedback, and to find out about future [Events](https://forum.schoolofdata.ch/c/events).
 
