Updated next event

--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -5,7 +5,7 @@ title: 10201 @ MuDA
 when: 2017-03-01
 date: 2017-02-14
 tagline:
-image: http://muda.co/stream/img/10201_main.jpg
+image: images/posts/muda-10201.jpg
 style: style1
 frontpage: true
 ---
@@ -16,10 +16,10 @@ frontpage: true
 <tr><th>Where:</th><td>MuDA, Zürich, Switzerland.</td></tr>
 <tr><th>Cost:</th><td>Free of charge.</td></tr>
 <tr><th>Bring:</th><td>A laptop or tablet.</td></tr>
-<tr><th></th><td><a href="https://www.facebook.com/events/157349754768822/#" class="button special">RSVP here</a>&nbsp;<a href="https://forum.schoolofdata.ch/t/1-5-3-i-o-ii-o-i/203" class="button special">Reply on forum</a></td></tr>
+<tr><th></th><td><a href="http://muda.co/stream/1002001.php" class="button special">Details</a>&nbsp;<a href="https://www.facebook.com/events/157349754768822/#" class="button special">RSVP here</a>&nbsp;<a href="https://forum.schoolofdata.ch/t/1-5-3-i-o-ii-o-i/203" class="button special">Comments</a></td></tr>
 </table>
 
-Our next **[Data Expedition](http://schoolofdata.org/data-expeditions/)** focuses on life and data in the neighbourhood. Examining the exact area of 101 by 101 metres (10201 m<sup>2</sup>) surrounding the [Museum of Digital Arts](http://muda.co/stream/10201.php) (MuDA), we would like to question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events at MuDA, we hope to empower participation by the public in our community embracing the power of information.
+Our next **[Data Expedition](http://schoolofdata.org/data-expeditions/)** focuses on life and data in the neighbourhood. Examining the exact area of 1001 by 1001 metres (1002001 m²) surrounding the [Museum of Digital Arts](http://muda.co/) (MuDA), we would like to question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events at MuDA, we hope to empower participation by the public in our community embracing the power of information.
 
 ![](http://muda.co/stream/img/10201_muda.jpg)
 
@@ -39,8 +39,4 @@ Data literacy is the ability to derive meaningful information from data, just as
 - Thursday ++ Friday, 5 – 8:30 pm
 - Saturday + Sunday, 12 – 7 pm
 
-[Visit muda.co](http://muda.co/stream/10201.php) for details of the workshop and [how to get here](http://muda.co/info/).
-
-Please use [our contact form](http://schoolofdata.ch#contact) or [forum](https://forum.schoolofdata.ch/) for any questions or feedback, and to find out about future [Events](https://forum.schoolofdata.ch/c/events).
-
-This Data Expedition will be facilitated by [@Oleg](https://forum.schoolofdata.ch/users/oleg/) and the [SODA community](http://soda.camp).
+[Visit muda.co](http://muda.co/stream/1002001.php) for details of the workshop and [how to get here](http://muda.co/info/). Use [our contact form](http://schoolofdata.ch#contact) or [forum](https://forum.schoolofdata.ch/) for any questions or feedback, and to find out about future [Events](https://forum.schoolofdata.ch/c/events).
