--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -21,22 +21,22 @@ frontpage: true
 
 Our next **[Data Expedition](http://schoolofdata.org/data-expeditions/)** focuses on life and data in the neighbourhood. Examining the exact area of 1001 by 1001 metres (1002001 m²) surrounding the [Museum of Digital Arts](http://muda.co/) (MuDA), we would like to question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events at MuDA, we hope to empower participation by the public in our community embracing the power of information.
 
-![](http://muda.co/stream/img/10201_muda.jpg)
+We aim to:
 
-We will aim to:
+- brainstorm what information helps us __be more aware__ of each other in a local community
+- find __existing open data__ covering and leading the way to this type of information
+- learn how to __make use of data__ with visualisation and fact-checking in everyday life
+- clean, preparem and share __new datasets__, openly instructing others in their use
 
-- brainstorm what information helps us be more aware of each other in a local community
-- find existing and open data sets covering this type of information
-- share, clean and prepare new data sets for use in data art, visualisation, analysis
-- make the data and documentation available for others to use
+Schedule:
 
-Data literacy is the ability to derive meaningful information from data, just as literacy in general is the ability to derive information from the written word.
-
-*Beyond the traditional statistics, what is really occurring underneath, within and around all that WE know and experience in Kreis 5? What does it mean to be part of this once abandoned industrial quartier which has undergone a remarkable transformation in recent decades? What are the implications of raising rent, building an asylum center, boom of trendy businesses and a growing population? How many trucks pass by the MuDA on a daily basis?*
-
-**March 1 - 5, 2017**
-- *Launch +++* Wednesday, 5 – 8 pm
+- **Launch +++** Wednesday, March 1, 5 – 8 pm
 - Thursday ++ Friday, 5 – 8:30 pm
-- Saturday + Sunday, 12 – 7 pm
+- Saturday + 12 – 7 pm + **Open Data Day**
+- Sunday, March 5 ++ 12 – 7 pm
 
-[Visit muda.co](http://muda.co/stream/1002001.php) for details of the workshop and [how to get here](http://muda.co/info/). Use [our contact form](http://schoolofdata.ch#contact) or [forum](https://forum.schoolofdata.ch/) for any questions or feedback, and to find out about future [Events](https://forum.schoolofdata.ch/c/events).
+> In parallel to our workshops, on Saturday, March 4, the *Zurich R User Group* is [hosting a hackathon](http://zurich-r-user-group.github.io/hackathon.html) on occasion of international **[Open Data Day](http://opendataday.org/)**. They will focus on reusing public transport data from [VBZ](https://www.stadt-zuerich.ch/vbz/en/index.html) across various themes. We will present the intermediary results of this workshop there, and help their projects gain more awareness.
+
+[Visit muda.co](http://muda.co/stream/1002001.php) for more details of the workshop and [how to get here](http://muda.co/info/). Use [our contact form](http://schoolofdata.ch#contact) or [forum](https://forum.schoolofdata.ch/) for any questions or feedback, and to find out about future [Events](https://forum.schoolofdata.ch/c/events).
+
+![](http://muda.co/stream/img/10201_muda.jpg)
