--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -26,7 +26,7 @@ We aim to:
 - brainstorm what information helps us __be more aware__ of each other in a local community
 - find __existing open data__ covering and leading the way to this type of information
 - learn how to __make use of data__ with visualisation and fact-checking in everyday life
-- clean, preparem and share __new datasets__, openly instructing others in their use
+- clean, prepare and share __new datasets__, openly instructing others in their use
 
 Schedule:
 
