--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -35,7 +35,7 @@ Schedule:
 - Saturday + 12 – 7 pm + **Open Data Day**
 - Sunday, March 5 ++ 12 – 7 pm
 
-> In parallel to our workshops, on Saturday, March 4, the *Zurich R User Group* is [hosting a hackathon](http://zurich-r-user-group.github.io/hackathon.html) on occasion of international **[Open Data Day](http://opendataday.org/)**. They will focus on reusing public transport data from [VBZ](https://www.stadt-zuerich.ch/vbz/en/index.html) across various themes. We will present the intermediary results of this workshop there, and help their projects gain more awareness.
+> In parallel to our workshops, on Saturday, March 4, the *Zurich R User Group* is [hosting a hackathon](http://zurich-r-user-group.github.io/hackathon.html) on occasion of international **[Open Data Day](http://opendataday.org/)**. They will focus on reusing public transport data from [VBZ](https://www.stadt-zuerich.ch/vbz/en/index.html) across various themes. We will present the intermediary results of this workshop there, and help community projects gain more awareness.
 
 [Visit muda.co](http://muda.co/stream/1002001.php) for more details of the workshop and [how to get here](http://muda.co/info/). Use [our contact form](http://schoolofdata.ch#contact) or [forum](https://forum.schoolofdata.ch/) for any questions or feedback, and to find out about future [Events](https://forum.schoolofdata.ch/c/events).
 
