Revised frontpage, translation

--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 author: Oleg Lavrovsky
-title: 1002^2 @ MuDA
+title: 1002^2 x MuDA
 when: 2017-03-01
 date: 2017-02-14
 tagline:
 image: images/posts/muda-10201.jpg
-style: style1
+style: style2
 frontpage: true
 ---
 
