--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Oleg Lavrovsky
-title: 1002^2 x MuDA
+title: Expedition
 when: 2017-03-01
 date: 2017-02-14
 tagline:
@@ -10,7 +10,7 @@ style: style2
 frontpage: true
 ---
 
-> Our March [Data Expedition](http://schoolofdata.org/data-expeditions/) focuses on life and data in the neighbourhood. Examining the exact area of 1001 by 1001 metres (1002001 m²) surrounding the **[Museum of Digital Arts](http://muda.co/)** (MuDA), we would like to question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events at MuDA, we hope to empower participation by the public in our community embracing the power of information.
+> Our March Data Expedition **1002^2 x MuDA** focuses on life and data in the neighbourhood. Examining the exact area of 1001 by 1001 metres (1002001 m²) surrounding the **[Museum of Digital Arts](http://muda.co/)** (MuDA), wehere we question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events at MuDA, we hope to empower participation by the public in our community embracing the power of information.
 
 <h2>Recap</h2>
 
