--- a/_posts/2017-08-23-Toolbox.md
+++ b/_posts/2017-08-23-Toolbox.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Oleg Lavrovsky
-title: Toolbox
+title: Workshop
 date: 2017-08-01
 when: 2017-08-23
 style: style7
@@ -10,9 +10,9 @@ frontpage: true
 image: http://opendata.utou.ch/presentations/open%20data%202017.6/images/toolbox2.png
 ---
 
-The [School of Data Handbook](https://schoolofdata.org/handbook/) advises us that "all [data] processing can be expressed as a set of incremental stages." Work in each of these *stages* is facilitated by a variety of tools and methods, and every "data wrangler" will have their own favorites, furnished by experience, expertise, the day's technology fashions, or personal preference. While Information Technology moves at a rapid pace - software tools being quickly replaced as the industry moves on - the fundamental steps and techniques relevant to Data Literacy remain universal. 
+The [School of Data Handbook](https://schoolofdata.org/handbook/) advises us that "all [data] processing can be expressed as a set of incremental stages." Work in each of these *stages* is facilitated by a variety of tools and methods, and every "data wrangler" will have their own favorites, furnished by experience, expertise, the day's technology fashions, or personal preference. While Information Technology moves at a rapid pace - software tools being quickly replaced as the industry moves on - the fundamental steps and techniques relevant to Data Literacy remain universal.
 
-With this in mind, we started an online toolbox based on the School of Data [pipeline](http://toolbox.schoolofdata.ch/overview.html) in a project to support a school class in Switzerland working on [Open Government Data](https://ogd.tg.ch/) challenges. Our goal is to help beginners get started with a basic overview, demo and pointers to further resources - and keep track of mature, widely adopted open source data wrangling tools. 
+With this in mind, we started an online toolbox based on the School of Data [pipeline](http://toolbox.schoolofdata.ch/overview.html) in a project to support a school class in Switzerland working on [Open Government Data](https://ogd.tg.ch/) challenges. Our goal is to help beginners get started with a basic overview, demo and pointers to further resources - and keep track of mature, widely adopted open source data wrangling tools.
 
 [<img src="http://opendata.utou.ch/presentations/open%20data%202017.6/images/toolbox2.png" width="200">](http://toolbox.schoolofdata.ch)
 
