--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-author: Oleg Lavrovsky
+author: School of Data in Switzerland
 title: Expedition
 when: 2017-03-01
 date: 2017-02-14
