--- a/_posts/2017-02-14-MuDa-10201.md
+++ b/_posts/2017-02-14-MuDa-10201.md
@@ -7,7 +7,7 @@ date: 2017-02-14
 tagline:
 image: images/posts/muda-10201.jpg
 style: style2
-frontpage: true
+frontpage: false
 ---
 
 > Our March Data Expedition **1002^2 x MuDA** focuses on life and data in the neighbourhood. Examining the exact area of 1001 by 1001 metres (1002001 m²) surrounding the **[Museum of Digital Arts](http://muda.co/)** (MuDA), wehere we question and bring to life the data of what it means to live and work in this district. Through data literacy workshops, talks and events at MuDA, we hope to empower participation by the public in our community embracing the power of information.
